--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>codewithsamir</title>
     <style>
+        body{
+            display:flex;
+            justify-content:center;
+            align-item:center;
+            height:100vh;
+            width:100%;
+        }
         .card{
             width: 400px;
             height: 400px;
